More compiler fixes